# Scraping

./: .gitignore  README.md  docker-compose.yaml  mvideo.py  pyproject.toml  requirements.txt  runner.py
insta/: example_env  items.py  middlewares.py  pipelines.py  settings.py
insta/spiders/: instagram.py
leroy_merlin/: items.py  middlewares.py  pipelines.py  settings.py
leroy_merlin/spiders/: merlin.py
vacancy_scrap/: run.py  scrapy.cfg
vacancy_scrap/vacancy_scrap/: items.py  middlewares.py  pipelines.py  settings.py
vacancy_scrap/vacancy_scrap/spiders/: headhunter.py  superjob.py
