[tool.poetry]
name = "scraping"
version = "0.1.0"
description = "cute project"
authors = ["kpomak <romka_ne@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.16"
python-dotenv = "^0.21.1"
pillow = "^9.4.0"
pymongo = "^4.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
